--- a/_data/engine-cli-edge/docker_plugin_set.yaml
+++ b/_data/engine-cli-edge/docker_plugin_set.yaml
@@ -18,16 +18,13 @@ examples: |-
   `sample-volume-plugin` plugin.
 
   ```bash
-  {% raw %}
   $ docker plugin inspect -f {{.Settings.Env}} tiborvass/sample-volume-plugin
-
   [DEBUG=0]
 
   $ docker plugin set tiborvass/sample-volume-plugin DEBUG=1
 
   $ docker plugin inspect -f {{.Settings.Env}} tiborvass/sample-volume-plugin
   [DEBUG=1]
-  {% endraw %}
   ```
 
   ### Change the source of a mount
@@ -36,7 +33,6 @@ examples: |-
   the `myplugin` plugin.
 
   ```bash
-  {% raw %}
   $ docker plugin inspect -f '{{with $mount := index .Settings.Mounts 0}}{{$mount.Source}}{{end}}' myplugin
   /foo
 
@@ -44,7 +40,6 @@ examples: |-
 
   $ docker plugin inspect -f '{{with $mount := index .Settings.Mounts 0}}{{$mount.Source}}{{end}}' myplugin
   /bar
-  {% endraw %}
   ```
 
   > **Note**: Since only `source` is settable in `mymount`,
@@ -56,7 +51,6 @@ examples: |-
   the `myplugin` plugin.
 
   ```bash
-  {% raw %}
   $ docker plugin inspect -f '{{with $device := index .Settings.Devices 0}}{{$device.Path}}{{end}}' myplugin
   /dev/foo
 
@@ -64,7 +58,6 @@ examples: |-
 
   $ docker plugin inspect -f '{{with $device := index .Settings.Devices 0}}{{$device.Path}}{{end}}' myplugin
   /dev/bar
-  {% endraw %}
   ```
 
   > **Note**: Since only `path` is settable in `mydevice`,
@@ -72,17 +65,15 @@ examples: |-
 
   ### Change the source of the arguments
 
-  The following example change the source of the args on the `myplugin` plugin.
+  The following example change the value of the args on the `myplugin` plugin.
 
   ```bash
-  {% raw %}
   $ docker plugin inspect -f '{{.Settings.Args}}' myplugin
   ["foo", "bar"]
 
-  $ docker plugins set myplugin args="foo bar baz"
+  $ docker plugins set myplugin myargs="foo bar baz"
 
   $ docker plugin inspect -f '{{.Settings.Args}}' myplugin
   ["foo", "bar", "baz"]
-  {% endraw %}
   ```
 
