--- a/_data/engine-cli-edge/docker_run.yaml
+++ b/_data/engine-cli-edge/docker_run.yaml
@@ -17,11 +17,9 @@ pname: docker
 plink: docker.yaml
 options:
 - option: add-host
-  default_value: '[]'
   description: Add a custom host-to-IP mapping (host:ip)
 - option: attach
   shorthand: a
-  default_value: '[]'
   description: Attach to STDIN, STDOUT or STDERR
 - option: blkio-weight
   default_value: "0"
@@ -31,10 +29,8 @@ options:
   default_value: '[]'
   description: Block IO weight (relative device weight)
 - option: cap-add
-  default_value: '[]'
   description: Add Linux capabilities
 - option: cap-drop
-  default_value: '[]'
   description: Drop Linux capabilities
 - option: cgroup-parent
   description: Optional parent cgroup for the container
@@ -63,14 +59,11 @@ options:
   default_value: "0"
   description: CPU shares (relative weight)
 - option: cpus
-  default_value: "0.000"
   description: Number of CPUs
 - option: cpuset-cpus
   description: CPUs in which to allow execution (0-3, 0,1)
 - option: cpuset-mems
   description: MEMs in which to allow execution (0-3, 0,1)
-- option: credentialspec
-  description: Credential spec for managed service account (Windows only)
 - option: detach
   shorthand: d
   default_value: "false"
@@ -78,10 +71,8 @@ options:
 - option: detach-keys
   description: Override the key sequence for detaching a container
 - option: device
-  default_value: '[]'
   description: Add a host device to the container
 - option: device-cgroup-rule
-  default_value: '[]'
   description: Add a rule to the cgroup allowed devices list
 - option: device-read-bps
   default_value: '[]'
@@ -99,31 +90,23 @@ options:
   default_value: "true"
   description: Skip image verification
 - option: dns
-  default_value: '[]'
   description: Set custom DNS servers
 - option: dns-opt
-  default_value: '[]'
   description: Set DNS options
 - option: dns-option
-  default_value: '[]'
   description: Set DNS options
 - option: dns-search
-  default_value: '[]'
   description: Set custom DNS search domains
 - option: entrypoint
   description: Overwrite the default ENTRYPOINT of the image
 - option: env
   shorthand: e
-  default_value: '[]'
   description: Set environment variables
 - option: env-file
-  default_value: '[]'
   description: Read in a file of environment variables
 - option: expose
-  default_value: '[]'
   description: Expose a port or a range of ports
 - option: group-add
-  default_value: '[]'
   description: Add additional groups to join
 - option: health-cmd
   description: Command to run to check health
@@ -133,6 +116,10 @@ options:
 - option: health-retries
   default_value: "0"
   description: Consecutive failures needed to report unhealthy
+- option: health-start-period
+  default_value: 0s
+  description: |
+    Start period for the container to initialize before starting health-retries countdown (ns|us|ms|s|m|h) (default 0s)
 - option: health-timeout
   default_value: 0s
   description: |
@@ -173,21 +160,16 @@ options:
   description: Kernel memory limit
 - option: label
   shorthand: l
-  default_value: '[]'
   description: Set meta data on a container
 - option: label-file
-  default_value: '[]'
   description: Read in a line delimited file of labels
 - option: link
-  default_value: '[]'
   description: Add link to another container
 - option: link-local-ip
-  default_value: '[]'
   description: Container IPv4/IPv6 link-local addresses
 - option: log-driver
   description: Logging driver for the container
 - option: log-opt
-  default_value: '[]'
   description: Log driver options
 - option: mac-address
   description: Container MAC address (e.g., 92:d0:c6:0a:29:33)
@@ -205,19 +187,19 @@ options:
 - option: memory-swappiness
   default_value: "-1"
   description: Tune container memory swappiness (0 to 100)
+- option: mount
+  description: Attach a filesystem mount to the container
 - option: name
   description: Assign a name to the container
 - option: net
   default_value: default
   description: Connect a container to a network
 - option: net-alias
-  default_value: '[]'
   description: Add network-scoped alias for the container
 - option: network
   default_value: default
   description: Connect a container to a network
 - option: network-alias
-  default_value: '[]'
   description: Add network-scoped alias for the container
 - option: no-healthcheck
   default_value: "false"
@@ -238,7 +220,6 @@ options:
   description: Give extended privileges to this container
 - option: publish
   shorthand: p
-  default_value: '[]'
   description: Publish a container's port(s) to the host
 - option: publish-all
   shorthand: P
@@ -256,7 +237,6 @@ options:
 - option: runtime
   description: Runtime to use for this container
 - option: security-opt
-  default_value: '[]'
   description: Security Options
 - option: shm-size
   default_value: "0"
@@ -271,13 +251,11 @@ options:
   default_value: "0"
   description: Timeout (in seconds) to stop a container
 - option: storage-opt
-  default_value: '[]'
   description: Storage driver options for the container
 - option: sysctl
   default_value: map[]
   description: Sysctl options
 - option: tmpfs
-  default_value: '[]'
   description: Mount a tmpfs directory
 - option: tty
   shorthand: t
@@ -295,12 +273,10 @@ options:
   description: UTS namespace to use
 - option: volume
   shorthand: v
-  default_value: '[]'
   description: Bind mount a volume
 - option: volume-driver
   description: Optional volume driver for the container
 - option: volumes-from
-  default_value: '[]'
   description: Mount volumes from the specified container(s)
 - option: workdir
   shorthand: w
@@ -459,6 +435,29 @@ examples: |-
   ```
 
   For in-depth information about volumes, refer to [manage data in containers](https://docs.docker.com/engine/tutorials/dockervolumes/)
+
+
+  ### Add bind-mounts or volumes using the --mount flag
+
+  The `--mount` flag allows you to mount volumes, host-directories and `tmpfs`
+  mounts in a container.
+
+  The `--mount` flag supports most options that are supported by the `-v` or the
+  `--volume` flag, but uses a different syntax. For in-depth information on the
+  `--mount` flag, and a comparison between `--volume` and `--mount`, refer to
+  the [service create command reference](service_create.md#add-bind-mounts-or-volumes).
+
+  Even though there is no plan to deprecate `--volume`, usage of `--mount` is recommended.
+
+  Examples:
+
+  ```bash
+  $ docker run --read-only --mount type=volume,target=/icanwrite busybox touch /icanwrite/here
+  ```
+
+  ```bash
+  $ docker run -t -i --mount type=bind,src=/data,dst=/data busybox sh
+  ```
 
   ### Publish or expose port (-p, --expose)
 
