--- a/_data/engine-cli-edge/docker_node_ls.yaml
+++ b/_data/engine-cli-edge/docker_node_ls.yaml
@@ -12,6 +12,8 @@ options:
 - option: filter
   shorthand: f
   description: Filter output based on conditions provided
+- option: format
+  description: Pretty-print nodes using a Go template
 - option: quiet
   shorthand: q
   default_value: "false"
@@ -25,6 +27,11 @@ examples: |-
   38ciaotwjuritcdtn9npbnkuz    swarm-worker1   Ready   Active
   e216jshn25ckzbvmwlnh5jr3g *  swarm-manager1  Ready   Active        Leader
   ```
+  > **Note**:
+  > In the above example output, there is a hidden column of `.Self` that indicates if the
+  > node is the same node as the current docker daemon. A `*` (e.g., `e216jshn25ckzbvmwlnh5jr3g *`)
+  > means this node is the current docker daemon.
+
 
   ### Filtering
 
@@ -103,4 +110,32 @@ examples: |-
   ID                           HOSTNAME        STATUS  AVAILABILITY  MANAGER STATUS
   e216jshn25ckzbvmwlnh5jr3g *  swarm-manager1  Ready   Active        Leader
   ```
+
+  ### Formatting
+
+  The formatting options (`--format`) pretty-prints nodes output
+  using a Go template.
+
+  Valid placeholders for the Go template are listed below:
+
+  Placeholder      | Description
+  -----------------|------------------------------------------------------------------------------------------
+  `.ID`            | Node ID
+  `.Self`          | Node of the daemon (`true/false`, `true`indicates that the node is the same as current docker daemon)
+  `.Hostname`      | Node hostname
+  `.Status`        | Node status
+  `.Availability`  | Node availability ("active", "pause", or "drain")
+  `.ManagerStatus` | Manager status of the node
+
+  When using the `--format` option, the `node ls` command will either
+  output the data exactly as the template declares or, when using the
+  `table` directive, includes column headers as well.
+
+  The following example uses a template without headers and outputs the
+  `ID` and `Hostname` entries separated by a colon for all nodes:
+
+  ```bash
+  $ docker node ls --format "{{.ID}}: {{.Hostname}}"
+  e216jshn25ckzbvmwlnh5jr3g: swarm-manager1
+  ``
 
