--- a/_data/engine-cli-edge/docker_service_ls.yaml
+++ b/_data/engine-cli-edge/docker_service_ls.yaml
@@ -41,6 +41,7 @@ examples: |-
 
   * [id](service_ls.md#id)
   * [label](service_ls.md#label)
+  * [mode](service_ls.md#mode)
   * [name](service_ls.md#name)
 
   #### id
@@ -79,6 +80,18 @@ examples: |-
   74nzcxxjv6fq  backend   replicated  3/3       redis:3.0.6
   ```
 
+  #### mode
+
+  The `mode` filter matches on the mode (either `replicated` or `global`) of a service.
+
+  The following filter matches only `global` services.
+
+  ```bash
+  $ docker service ls --filter mode=global
+  ID                  NAME                MODE                REPLICAS            IMAGE
+  w7y0v2yrn620        top                 global              1/1                 busybox
+  ```
+
   #### name
 
   The `name` filter matches on all or part of a service's name.
@@ -105,6 +118,7 @@ examples: |-
   `.Mode`     | Service mode (replicated, global)
   `.Replicas` | Service replicas
   `.Image`    | Service image
+  `.Ports`    | Service ports published in ingress mode
 
   When using the `--format` option, the `service ls` command will either
   output the data exactly as the template declares or, when using the
@@ -114,11 +128,9 @@ examples: |-
   `ID`, `Mode`, and `Replicas` entries separated by a colon for all services:
 
   ```bash
-  {% raw %}
   $ docker service ls --format "{{.ID}}: {{.Mode}} {{.Replicas}}"
 
   0zmvwuiu3vue: replicated 10/10
   fm6uf97exkul: global 5/5
-  {% endraw %}
   ```
 
