--- a/_data/engine-cli-edge/docker_service_update.yaml
+++ b/_data/engine-cli-edge/docker_service_update.yaml
@@ -17,52 +17,46 @@ options:
 - option: args
   description: Service command args
 - option: constraint-add
-  default_value: '[]'
   description: Add or update a placement constraint
 - option: constraint-rm
-  default_value: '[]'
   description: Remove a constraint
 - option: container-label-add
-  default_value: '[]'
   description: Add or update a container label
 - option: container-label-rm
-  default_value: '[]'
   description: Remove a container label by its key
+- option: credential-spec
+  description: Credential spec for managed service account (Windows only)
+- option: detach
+  shorthand: d
+  default_value: "true"
+  description: |
+    Exit immediately instead of waiting for the service to converge
 - option: dns-add
-  default_value: '[]'
   description: Add or update a custom DNS server
 - option: dns-option-add
-  default_value: '[]'
   description: Add or update a DNS option
 - option: dns-option-rm
-  default_value: '[]'
   description: Remove a DNS option
 - option: dns-rm
-  default_value: '[]'
   description: Remove a custom DNS server
 - option: dns-search-add
-  default_value: '[]'
   description: Add or update a custom DNS search domain
 - option: dns-search-rm
-  default_value: '[]'
   description: Remove a DNS search domain
 - option: endpoint-mode
-  default_value: vip
   description: Endpoint mode (vip or dnsrr)
+- option: entrypoint
+  description: Overwrite the default ENTRYPOINT of the image
 - option: env-add
-  default_value: '[]'
   description: Add or update an environment variable
 - option: env-rm
-  default_value: '[]'
   description: Remove an environment variable
 - option: force
   default_value: "false"
   description: Force update even if no changes require it
 - option: group-add
-  default_value: '[]'
   description: Add an additional supplementary user group to the container
 - option: group-rm
-  default_value: '[]'
   description: |
     Remove a previously added supplementary user group from the container
 - option: health-cmd
@@ -72,26 +66,24 @@ options:
 - option: health-retries
   default_value: "0"
   description: Consecutive failures needed to report unhealthy
+- option: health-start-period
+  description: |
+    Start period for the container to initialize before counting retries towards unstable (ns|us|ms|s|m|h)
 - option: health-timeout
   description: Maximum time to allow one check to run (ns|us|ms|s|m|h)
 - option: host-add
-  default_value: '[]'
   description: Add or update a custom host-to-IP mapping (host:ip)
 - option: host-rm
-  default_value: '[]'
   description: Remove a custom host-to-IP mapping (host:ip)
 - option: hostname
   description: Container hostname
 - option: image
   description: Service image tag
 - option: label-add
-  default_value: '[]'
   description: Add or update a service label
 - option: label-rm
-  default_value: '[]'
   description: Remove a label by its key
 - option: limit-cpu
-  default_value: "0.000"
   description: Limit CPUs
 - option: limit-memory
   default_value: "0"
@@ -99,13 +91,15 @@ options:
 - option: log-driver
   description: Logging driver for service
 - option: log-opt
-  default_value: '[]'
   description: Logging driver options
 - option: mount-add
   description: Add or update a mount on a service
 - option: mount-rm
-  default_value: '[]'
   description: Remove a mount by its target path
+- option: network-add
+  description: Add a network
+- option: network-rm
+  description: Remove a network
 - option: no-healthcheck
   default_value: "false"
   description: Disable any container-specified HEALTHCHECK
@@ -117,13 +111,16 @@ options:
   description: Add or update a published port
 - option: publish-rm
   description: Remove a published port by its target port
+- option: quiet
+  shorthand: q
+  default_value: "false"
+  description: Suppress progress output
 - option: read-only
   default_value: "false"
   description: Mount the container's root filesystem as read only
 - option: replicas
   description: Number of tasks
 - option: reserve-cpu
-  default_value: "0.000"
   description: Reserve CPUs
 - option: reserve-memory
   default_value: "0"
@@ -141,9 +138,8 @@ options:
   description: Rollback to previous specification
 - option: rollback-delay
   default_value: 0s
-  description: Delay between task rollbacks (ns|us|ms|s|m|h) (default 0s)
+  description: Delay between task rollbacks (ns|us|ms|s|m|h)
 - option: rollback-failure-action
-  default_value: pause
   description: Action on rollback failure ("pause"|"continue")
 - option: rollback-max-failure-ratio
   default_value: "0"
@@ -151,15 +147,16 @@ options:
 - option: rollback-monitor
   default_value: 0s
   description: |
-    Duration after each task rollback to monitor for failure (ns|us|ms|s|m|h) (default 0s)
+    Duration after each task rollback to monitor for failure (ns|us|ms|s|m|h)
+- option: rollback-order
+  description: Rollback order ("start-first"|"stop-first")
 - option: rollback-parallelism
-  default_value: "1"
+  default_value: "0"
   description: |
     Maximum number of tasks rolled back simultaneously (0 to roll back all at once)
 - option: secret-add
   description: Add or update a secret on a service
 - option: secret-rm
-  default_value: '[]'
   description: Remove a secret
 - option: stop-grace-period
   description: |
@@ -172,9 +169,8 @@ options:
   description: Allocate a pseudo-TTY
 - option: update-delay
   default_value: 0s
-  description: Delay between updates (ns|us|ms|s|m|h) (default 0s)
+  description: Delay between updates (ns|us|ms|s|m|h)
 - option: update-failure-action
-  default_value: pause
   description: Action on update failure ("pause"|"continue"|"rollback")
 - option: update-max-failure-ratio
   default_value: "0"
@@ -182,9 +178,11 @@ options:
 - option: update-monitor
   default_value: 0s
   description: |
-    Duration after each task update to monitor for failure (ns|us|ms|s|m|h) (default 0s)
+    Duration after each task update to monitor for failure (ns|us|ms|s|m|h)
+- option: update-order
+  description: Update order ("start-first"|"stop-first")
 - option: update-parallelism
-  default_value: "1"
+  default_value: "0"
   description: |
     Maximum number of tasks updated simultaneously (0 to update all at once)
 - option: user
@@ -219,13 +217,13 @@ examples: "### Update a service\n\n```bash\n$ docker service update --limit-cpu 
   \     type=volume,source=other-volume,target=/somewhere-else \\\n    myservice\n\nmyservice\n\n$
   docker service update --mount-rm /somewhere myservice\n\nmyservice\n```\n\n### Rolling
   back to the previous version of a service \n\nUse the `--rollback` option to roll
-  back to the previous version of the service.\n\nThis will revert the service to
+  back to the previous version of the service. \n\nThis will revert the service to
   the configuration that was in place before the most recent `docker service update`
   command.\n\nThe following example updates the number of replicas for the service
   from 4 to 5, and then rolls back to the previous configuration.\n\n```bash\n$ docker
   service update --replicas=5 web\n\nweb\n\n$ docker service ls\n\nID            NAME
   \ MODE        REPLICAS  IMAGE\n80bvrzp6vxf3  web   replicated  0/5       nginx:alpine\n\n```\nRoll
-  back the `web` service...\n\n```bash\n$ docker service update --rollback web\n\nweb\n\n$
+  back the `web` service... \n\n```bash\n$ docker service update --rollback web\n\nweb\n\n$
   docker service ls\n\nID            NAME  MODE        REPLICAS  IMAGE\n80bvrzp6vxf3
   \ web   replicated  0/4       nginx:alpine\n\n```\n\nOther options can be combined
   with `--rollback` as well, for example, `--update-delay 0s` to execute the rollback
