--- a/_data/engine-cli-edge/docker_system.yaml
+++ b/_data/engine-cli-edge/docker_system.yaml
@@ -1,6 +1,6 @@
 command: docker system
 short: Manage Docker
-long: Manage docker.
+long: Manage Docker.
 usage: docker system
 pname: docker
 plink: docker.yaml
