--- a/_data/engine-cli-edge/docker_volume.yaml
+++ b/_data/engine-cli-edge/docker_volume.yaml
@@ -1,8 +1,8 @@
 command: docker volume
 short: Manage volumes
 long: |-
-  Manage volumes. You can use subcommand to create, list, inspect, remove
-  volumes.
+  Manage volumes. You can use subcommands to create, inspect, list, remove, or
+  prune volumes.
 usage: docker volume COMMAND
 pname: docker
 plink: docker.yaml
