--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -265,8 +265,8 @@ guides:
     title: Using Chef
   - path: /engine/admin/puppet/
     title: Using Puppet
-  - path: /engine/admin/using_supervisord/
-    title: Using Supervisor with Docker
+  - path: /engine/admin/multi-service_containers/
+    title: Run multiple services in a container
   - path: /engine/admin/runmetrics/
     title: Runtime metrics
   - path: /engine/admin/ambassador_pattern_linking/
