Document multi-stage builds

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -185,6 +185,8 @@ guides:
       title: Create a base image
     - path: /engine/userguide/eng-image/image_management/
       title: Image management
+    - path: /engine/userguide/eng-image/multistage-build/
+      title: Use multi-stage builds (edge only)
   - sectiontitle: Docker storage drivers
     section:
     - path: /engine/userguide/storagedriver/imagesandcontainers/
