Revert "Update docker_service_rm.yaml"
This reverts commit a983380a5625b471f1a03f8ed2301ead72f98f1b.

--- a/_data/engine-cli-edge/docker_service_rm.yaml
+++ b/_data/engine-cli-edge/docker_service_rm.yaml
@@ -20,8 +20,6 @@ examples: |-
   ID  NAME  MODE  REPLICAS  IMAGE
   ```
 
-  > **Warning**:
-  > Unlike `docker rm`, this command does not ask for confirmation
+  > **Warning**: Unlike `docker rm`, this command does not ask for confirmation
   > before removing a running service.
-  {:.warning}
-  
+
