Revert "Update docker_secret_rm.yaml"
This reverts commit 4c454b883c300e26fbb056b954bb49ec2933b172.

--- a/_data/engine-cli/docker_secret_rm.yaml
+++ b/_data/engine-cli/docker_secret_rm.yaml
@@ -17,8 +17,6 @@ examples: |-
   sapth4csdo5b6wz2p5uimh5xg
   ```
 
-  > **Warning**:
-  > Unlike `docker rm`, this command does not ask for confirmation
+  > **Warning**: Unlike `docker rm`, this command does not ask for confirmation
   > before removing a secret.
-  {:.warning}
-  
+
