--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -1276,17 +1276,12 @@ manuals:
     - path: /docker-cloud/cloud-swarm/connect-to-swarm/
       title: Connect to a swarm through Docker Cloud
     - path: /docker-cloud/cloud-swarm/link-aws-swarm/
-<<<<<<< HEAD
-      title: Link to Amazon Web Services to create swarms
-  - sectiontitle: Manage infrastructure (standard mode)
-=======
       title: Link Amazon Web Services to Docker Cloud
     - path: /docker-cloud/cloud-swarm/link-azure-swarm/
       title: Link Microsoft Azure Cloud Services to Docker Cloud
     - path: /docker-cloud/cloud-swarm/ssh-key-setup/
       title: Set up SSH keys
-  - sectiontitle: Manage Infrastructure (Standard Mode)
->>>>>>> d5369e015c... add Cloud link to Azure topics
+  - sectiontitle: Manage Infrastructure (standard mode)
     section:
     - path: /docker-cloud/infrastructure/
       title: Infrastructure overview
