--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -16,7 +16,7 @@ horizontalnav:
   node: samples
 
 guides:
-- title: "Docs hackathon: April 17-22nd, 2017"
+- title: Docs hackathon results
   path: /hackathon/
 - sectiontitle: Get Docker
   section:
