--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -2208,6 +2208,8 @@ manuals:
     title: Networking
   - path: /docker-for-mac/osxfs/
     title: File system sharing
+  - path: /docker-for-mac/osxfs-caching/
+    title: Performance tuning for volume mounts (shared filesystems)
   - path: /docker-for-mac/troubleshoot/
     title: Logs and troubleshooting
   - path: /docker-for-mac/faqs/
