--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -1514,6 +1514,8 @@ manuals:
     title: Link Environment Variables (deprecated)
   - path: /compose/startup-order/
     title: Control startup order
+  - path: /compose/samples-for-compose/
+    title: Samples for Compose
 - sectiontitle: Docker Datacenter
   section:
   - path: /datacenter/install/aws/
