--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -475,14 +475,16 @@ reference:
     title: Get started
   - path: /engine/api/sdks/
     title: SDKs
-  - path: /engine/api/v1.28/
-    title: v1.28 reference
-  - path: /engine/api/v1.27/
-    title: v1.27 reference
+  - path: /engine/api/v1.29/		
+    title: v1.29 Reference
   - sectiontitle: Previous API versions
     section:
     - path: /engine/api/version-history/
       title: Version history overview
+    - path: /engine/api/v1.28/
+      title: v1.28 reference
+    - path: /engine/api/v1.27/
+      title: v1.27 reference
     - path: /engine/api/v1.26/
       title: v1.26 reference
     - path: /engine/api/v1.25/
