--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -248,7 +248,7 @@ guides:
     - path: /engine/admin/logging/json-file/
       title: JSON File logging driver
     - path: /engine/admin/logging/gelf/
-      title: Graylog Extended Format logging driver
+      title: Graylog Extended Format (GELF) logging driver
     - path: /engine/admin/logging/syslog/
       title: Syslog logging driver
     - path: /engine/admin/logging/awslogs/
