--- a/_data/glossary.yaml
+++ b/_data/glossary.yaml
@@ -107,7 +107,7 @@ ENTRYPOINT: |
   of the command to be run. If you want your Dockerfile to be runnable without
   specifying additional arguments to the `docker run` command, you must specify
   either `ENTRYPOINT`, `CMD`, or both.
-  
+
   - If `ENTRYPOINT` is specified, it is set to a single command. Most official
     Docker images have an `ENTRYPOINT` of `/bin/sh` or `/bin/bash`. Even if you
     do not specify `ENTRYPOINT`, you may inherit it from the base image that you
@@ -177,14 +177,13 @@ Machine: |
 
   *Also known as : docker-machine*
 namespace: |
-  A [Linux namespace](http://man7.org/linux/man-pages/man7/namespaces.7.html){: target="_blank" class="_"}
+  A [Linux namespace](http://man7.org/linux/man-pages/man7/namespaces.7.html)
   is a Linux kernel feature that isolates and vitualizes system resources. Processes which restricted to
   a namespace can only interact with resources or processes that are part of the same namespace. Namespaces
   are an important part of Docker's isolation model. Namespaces exist for each type of
   resource, including `net` (networking), `mnt` (storage), `pid` (processes), `uts` (hostname control),
   and `user` (UID mapping). For more information about namespaces, see [Docker run reference](/engine/reference/run.md)
-  and [Introduction to user namespaces](https://success.docker.com/KBase/Introduction_to_User_Namespaces_in_Docker_Engine){ :target="_blank" class="_" }.
-  
+  and [Introduction to user namespaces](https://success.docker.com/KBase/Introduction_to_User_Namespaces_in_Docker_Engine).
 node: |
   A [node](/engine/swarm/how-swarm-mode-works/nodes/) is a physical or virtual
   machine running an instance of the Docker Engine in swarm mode.
@@ -313,11 +312,10 @@ volume: |
 
   There are three types of volumes: *host, anonymous, and named*:
 
-  - A **host volume** lives on the Docker host's filesystem and can be accessed from within the container.  
+  - A **host volume** lives on the Docker host's filesystem and can be accessed from within the container.
 
   - A **named volume** is a volume which Docker manages where on disk the volume is created,
     but it is given a name.
 
   - An **anonymous volume** is similar to a named volume, however, it can be difficult, to refer to
     the same volume over time when it is an anonymous volumes. Docker handle where the files are stored.
-    
