--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -245,6 +245,8 @@ guides:
       title: View a container's logs
     - path: /engine/admin/logging/overview/
       title: Configuring logging drivers
+    - path: /engine/admin/logging/plugins/
+      title: Use a logging driver plugin
     - path: /engine/admin/logging/log_tags/
       title: Log tags for logging driver
     - path: /engine/admin/logging/logentries/
