Rewrite swarm service networking guide
- Reorganize and update info
- Add more info about each type of network
- Add info about customizing docker_gwbridge
- Add info about customizing ingress
- Expand on encryption options

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -334,7 +334,7 @@ guides:
   - path: /engine/swarm/swarm_manager_locking/
     title: Lock your swarm
   - path: /engine/swarm/networking/
-    title: Attach services to an overlay network
+    title: Manage swarm service networks
   - path: /engine/swarm/admin_guide/
     title: Swarm administration guide
   - path: /engine/swarm/raft/
