Add information about how CA rotation works to the swarm mode PKI doc (#3439)

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -322,7 +322,7 @@ guides:
     - path: /engine/swarm/how-swarm-mode-works/services/
       title: How services work
     - path: /engine/swarm/how-swarm-mode-works/pki/
-      title: How PKI works in swarm mode
+      title: Manage swarm security with PKI
   - path: /engine/swarm/swarm-mode/
     title: Run Docker Engine in swarm mode
   - path: /engine/swarm/join-nodes/
