Add docker-ee release notes
Signed-off-by: Brian Goff <cpuguy83@gmail.com>

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -1229,6 +1229,8 @@ manuals:
   - path: /engine/installation/
     title: Install Docker EE
     nosync: true
+  - path: /enterprise/release-notes/
+    title: Release Notes
 - sectiontitle: Commercially supported Docker Engine
   section:
   - sectiontitle: 1.13
